--- a/web/src/index.html
+++ b/web/src/index.html
@@ -13,7 +13,7 @@
     <![endif]-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 
     <title>Metavuo</title>
 </head>
